# computer

./: .env.template  .gitignore  .markdownlint.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  Taskfile.yml  bootstrap.sh  package.json  run_scenario.sh  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_tool.md
.github/semgrep/: ai-safety-rules.yml
.github/workflows/: docs-gate.yml  release.yml  robotics.yml  security.yml  simulation.yml  web-backend.yml
apps/assistant-api/: Dockerfile  README.md  pyproject.toml
apps/control-api/: Dockerfile  README.md  pyproject.toml
apps/control-api/control_api/: main.py
apps/digital-twin/: Dockerfile  README.md  pyproject.toml
apps/digital-twin/digital_twin/: main.py  seed.py
apps/event-ingest/: Dockerfile  README.md  pyproject.toml
apps/event-ingest/event_ingest/: main.py
apps/family-web/: README.md  package.json  tsconfig.json
apps/model-router/: Dockerfile  README.md  pyproject.toml
apps/model-router/model_router/: main.py  tool_registry.py  tools.py
apps/model-router/tests/: test_tool_registry.py
apps/ops-web/: README.md  next.config.ts  package.json
apps/orchestrator/: Dockerfile  README.md  pyproject.toml
apps/orchestrator/orchestrator/: main.py  models.py  policy.py  state_machine.py
apps/orchestrator/tests/: test_state_machine.py
data/bom/: phase-1.yaml
data/seed/: assets.yaml
docs/: README.md
docs/adr/: ADR-001-monorepo.md  ADR-002-ai-no-actuation.md  ADR-003-ha-not-system-of-record.md  ADR-004-mqtt-postgres.md  ADR-005-rover-before-drone.md  ADR-006-safety-gates.md  ADR-007-job-state-machine.md  ADR-008-osint-optional.md  ADR-009-device-identity.md  ADR-010-capability-model.md  ADR-011-personal-intelligence-plane.md  ADR-012-household-identity.md  ADR-013-personal-memory-partitioning.md  ADR-014-assistant-policy-tiers.md  ADR-015-family-assistant-ux-separate.md  ADR-016-voice-intent-routing.md  ADR-017-durable-workflow-plane.md  ADR-018-tool-fabric-plane.md  ADR-019-authorization-evolution.md  ADR-020-attention-plane.md  ADR-021-local-first-sync.md  ADR-022-voice-fluency.md  ADR-023-ai-eval-plane.md  ADR-024-traceability-plane.md  ADR-025-crk-primary-execution-loop.md  ADR-026-mcp-universal-step-7a.md  ADR-027-all-long-lived-tasks-use-workflow-runtime.md  ADR-028-attention-decisions-step-9-not-ui.md  ADR-029-execution-context-first-class.md  ADR-030-kernel-authority-model.md  ADR-031-workflow-orchestrator-boundary.md  ADR-032-mode-transitions-stickiness-shared-device.md  ADR-033-rebac-authorization-evolution.md  ADR-034-passkey-first-auth-family-web.md  ADR-035-local-first-sync-scope.md  ADR-036-policy-tuning-requires-impact-report-and-replay.md
docs/architecture/: authorization-evolution.md  cross-domain-priority-model.md  durable-workflow-strategy.md  kernel-authority-model.md  local-first-sync-strategy.md  missing-runtime-planes.md  objective-functions.md  passkey-auth-strategy.md  policy-domain-model.md  rebac-auth-evolution.md  runtime-glue-and-cohesion.md  runtime-kernel.md  service-responsibility-matrix.md  system-state-model.md  tool-admission-policy.md  tool-fabric-and-mcp-plan.md  tool-lifecycle-policy.md  transition-and-control-model.md  trust-kpis-and-drift-model.md  uncertainty-and-confidence-model.md  workflow-orchestrator-boundary.md  workflow-production-patterns.md  workflow-registry-model.md
docs/cli/: command-reference.md
docs/delivery/: assistant-eval-plan.md  bootstrap-boundaries.md  ci-matrix.md  (+7 more)
infra/: README.md
robotics/: README.md
robotics/ros2_ws/src/rover_control/: package.xml  setup.py
robotics/ros2_ws/src/rover_control/config/: nav2_params.yaml
robotics/ros2_ws/src/rover_control/launch/: rover.launch.py
robotics/ros2_ws/src/rover_control/rover_control/: nav2_bridge.py
scripts/: check_runtime.sh  generate-contracts.mjs  generate_docs_index.py  health_check.sh  operational_rubric.py  perfection_rubric.py  validate-contracts.mjs
services/attention-engine/: Dockerfile  README.md  pyproject.toml
services/attention-engine/attention_engine/: __init__.py  decision.py  main.py  memory.py
services/authz-service/: Dockerfile  README.md  pyproject.toml
services/authz-service/authz_service/: __init__.py  main.py
services/context-router/: README.md  pyproject.toml
services/context-router/context_router/: main.py
services/drone-control/: Dockerfile  README.md  pyproject.toml
services/drone-control/drone_control/: flight_state_machine.py  main.py  mavlink_bridge.py
services/drone-control/tests/: test_flight_state_machine.py
services/energy-engine/: Dockerfile  README.md  pyproject.toml
services/energy-engine/energy_engine/: main.py  state_machine.py
services/eval-runner/: Dockerfile  README.md  pyproject.toml
services/eval-runner/eval_runner/: __init__.py  main.py
services/greenhouse-control/: Dockerfile  README.md  pyproject.toml
services/greenhouse-control/greenhouse_control/: main.py  state_machine.py
services/greenhouse-control/tests/: test_state_machine.py
services/rover-control/: Dockerfile  README.md  pyproject.toml
services/rover-control/rover_control/: main.py  mission_state_machine.py
services/rover-control/tests/: test_mission_state_machine.py
services/runtime-kernel/: Dockerfile  README.md  pyproject.toml
services/runtime-kernel/runtime_kernel/: __init__.py  loop.py  main.py
services/runtime-kernel/tests/: test_crk_loop.py
services/security-monitor/: README.md  pyproject.toml
services/security-monitor/security_monitor/: incident_queue.py  main.py
services/voice-gateway/: README.md  pyproject.toml
services/voice-gateway/voice_gateway/: main.py  pipeline.py
services/workflow-runtime/: Dockerfile  README.md  pyproject.toml
services/workflow-runtime/workflow_runtime/: __init__.py  main.py  workflows.py
tests/integration/: conftest.py  pyproject.toml  test_assistant_trust.py  test_degraded_mode.py  test_durable_workflows.py  test_milestone_1.py  test_milestone_2.py  test_milestone_3.py  test_milestone_4.py  test_milestone_5.py
(+127 files in other folders)
