[project]
name = "attention-engine"
version = "0.1.0"
description = "Interrupt/queue/digest/silent delivery decisions — step 9 of the CRK execution loop"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "structlog>=24.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
