[project]
name = "drone-control"
version = "0.1.0"
description = "Drone mission control — supervised PX4/MAVLink bridge"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "aiomqtt>=2.3.0",
    "httpx>=0.28.1",
    "structlog>=25.1.0",
    "pymavlink>=2.4.41",
    "prometheus-client>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
