[project]
name = "voice-gateway"
version = "0.1.0"
description = "Local voice pipeline — wake word, STT, TTS, assistant routing"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.1",
    "structlog>=25.1.0",
    "websockets>=14.0",
    "sounddevice>=0.5.1",
    "numpy>=2.2.0",
    # STT: openai-whisper or vosk (installed at runtime based on VOICE_STT_BACKEND)
    # TTS: piper-tts (installed at runtime based on VOICE_TTS_BACKEND)
    # Wake word: pvporcupine (requires API key) or openwakeword
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends.legacy:build"
