[project]
name = "workflow-runtime"
version = "0.1.0"
description = "Durable workflow execution — Temporal worker for long-lived household tasks"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "structlog>=24.2.0",
    # Temporal SDK — required in production; comment out for stub-only testing
    # "temporalio>=1.6.0",
]

[project.optional-dependencies]
temporal = ["temporalio>=1.6.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
