[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computer-integration-tests"
version = "0.1.0"
description = "Integration test suite for Computer system"
requires-python = ">=3.14"
dependencies = [
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
addopts = "-v"

[tool.ruff]
line-length = 100
